QCocoaMenu: Avoid exception when inserting item already in this menu

This should not happen, but it's clearly not the user's fault.
So we should try to carry on as gracefully as possible instead
of letting Cocoa abort the application.

The patch also factors the repeated calls to QCocoaMenuItem::
nsItem() in QCocoaMenu::insertNative() and improves a warning
from QCocoaMenuIten::sync().

Change-Id: I97dbd3685ce237cb60700d8bbf64919f028edb9a
(cherry picked from commit b2f78b796b5b73d4f0732975ffd66f8aa392c001)
Task-number: QTBUG-57404
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@qt.io>
Reviewed-by: Jake Petroules <jake.petroules@qt.io>