src/plugins/platforms/cocoa/qcocoamenu.mm
@@ -325,11 +325,12 @@ void QCocoaMenu::insertMenuItem(QPlatformMenuItem *menuItem, QPlatformMenuItem *
 
 void QCocoaMenu::insertNative(QCocoaMenuItem *item, QCocoaMenuItem *beforeItem)
 {
-    item->nsItem().target = m_nativeMenu.delegate;
+    NSMenuItem *nativeItem = item->nsItem();
+    nativeItem.target = m_nativeMenu.delegate;
     if (!item->menu())
-        [item->nsItem() setAction:@selector(itemFired:)];
-    else if (isOpen() && item->nsItem()) // Someone's adding new items after aboutToShow() was emitted
-        item->menu()->setAttachedItem(item->nsItem());
+        nativeItem.action = @selector(itemFired:);
+    else if (isOpen() && nativeItem) // Someone's adding new items after aboutToShow() was emitted
+        item->menu()->setAttachedItem(nativeItem);
 
     item->setParentEnabled(isEnabled());
 
@@ -342,15 +343,20 @@ void QCocoaMenu::insertNative(QCocoaMenuItem *item, QCocoaMenuItem *beforeItem)
         beforeItem = itemOrNull(m_menuItems.indexOf(beforeItem) + 1);
     }
 
+    if (nativeItem.menu) {
+        qWarning() << "Menu item" << item->text() << "already in menu" << QString::fromNSString(nativeItem.menu.title);
+        return;
+    }
+
     if (beforeItem) {
         if (beforeItem->isMerged()) {
             qWarning("No non-merged before menu item found");
             return;
         }
-        NSUInteger nativeIndex = [m_nativeMenu indexOfItem:beforeItem->nsItem()];
-        [m_nativeMenu insertItem: item->nsItem() atIndex: nativeIndex];
+        const NSInteger nativeIndex = [m_nativeMenu indexOfItem:beforeItem->nsItem()];
+        [m_nativeMenu insertItem:nativeItem atIndex:nativeIndex];
     } else {
-        [m_nativeMenu addItem: item->nsItem()];
+        [m_nativeMenu addItem:nativeItem];
     }
     item->setMenuParent(this);
 }
